--- a/roles/control-plane/templates/kube-api.cnf.j2
+++ b/roles/control-plane/templates/kube-api.cnf.j2
@@ -12,5 +12,7 @@ DNS.2 = kubernetes.default
 DNS.3 = kubernetes.default.svc
 DNS.4 = kubernetes.default.svc.cluster.local
 IP.1 = 127.0.0.1
-IP.2 = {{ansible_default_ipv4.address}}
-IP.3 = 10.96.0.1
+IP.2 = {{ip_address}}
+IP.3 = {{ansible_default_ipv4.address}}
+IP.4 = {{inventory_hostname}}
+IP.5 = 10.96.0.1
