--- a/roles/control-plane/templates/kube-controller-manager.service.j2
+++ b/roles/control-plane/templates/kube-controller-manager.service.j2
@@ -18,6 +18,8 @@ ExecStart=/usr/local/bin/kube-controller-manager \
 --controllers=*,bootstrapsigner \
 --use-service-account-credentials=true \
 --allocate-node-cidrs=true \
+--tls-min-version=VersionTLS12 \
+--profiling=false \
 --v=2
 Restart=on-failure
 RestartSec=5
