--- a/roles/control-plane/templates/kube-scheduler.service.j2
+++ b/roles/control-plane/templates/kube-scheduler.service.j2
@@ -8,6 +8,7 @@ ExecStart=/usr/local/bin/kube-scheduler \
   --authentication-kubeconfig=/var/lib/kubernetes/kube-scheduler.kubeconfig \
   --authorization-kubeconfig=/var/lib/kubernetes/kube-scheduler.kubeconfig \
   --bind-address=127.0.0.1 \
+  --tls-min-version VersionTLS12 \
   --leader-elect=true
 Restart=on-failure
 RestartSec=5
