--- a/roles/etcd/templates/etcd.service.j2
+++ b/roles/etcd/templates/etcd.service.j2
@@ -3,26 +3,10 @@ Description=etcd
 Documentation=https://github.com/coreos
 
 [Service]
-ExecStart=/usr/local/bin/etcd \
-  --name etcd-{{ansible_hostname}} \
-  --cert-file=/etc/etcd/etcd.crt \
-  --key-file=/etc/etcd/etcd.key \
-  --peer-cert-file=/etc/etcd/etcd.crt \
-  --peer-key-file=/etc/etcd/etcd.key \
-  --trusted-ca-file=/var/lib/kubernetes/ca.crt \
-  --peer-trusted-ca-file=/var/lib/kubernetes/ca.crt \
-  --peer-client-cert-auth \
-  --client-cert-auth \
-  --initial-advertise-peer-urls https://{{ansible_default_ipv4.address}}:2380 \
-  --listen-peer-urls https://{{ansible_default_ipv4.address}}:2380 \
-  --listen-client-urls https://{{ansible_default_ipv4.address}}:2379,https://127.0.0.1:2379 \
-  --advertise-client-urls https://{{ansible_default_ipv4.address}}:2379 \
-  --initial-cluster-token etcd-cluster-token \
-  --initial-cluster {{initial_cluster}} \
-  --initial-cluster-state new \
-  --data-dir=/var/lib/etcd
+ExecStart=/usr/local/bin/etcd --config-file /etc/etcd/etcd-config.yml
 Restart=on-failure
 RestartSec=5
+User=etcd
 
 [Install]
 WantedBy=multi-user.target
