--- a/roles/control-plane/templates/kube-apiserver.service.j2
+++ b/roles/control-plane/templates/kube-apiserver.service.j2
@@ -4,15 +4,15 @@ Documentation=https://github.com/kubernetes/kubernetes
 
 [Service]
 ExecStart=/usr/local/bin/kube-apiserver \
---advertise-address={{ansible_default_ipv4.address}} \
+--advertise-address={{ip_address}} \
 --allow-privileged=true \
 --authorization-mode=Node,RBAC \
 --client-ca-file=/var/lib/kubernetes/ca.crt \
---enable-admission-plugins=NodeRestriction \
+--enable-admission-plugins=NodeRestriction,ValidatingAdmissionWebhook \
 --enable-bootstrap-token-auth=true \
---etcd-cafile=/var/lib/kubernetes/ca.crt \
---etcd-certfile=/etc/etcd/etcd.crt \
---etcd-keyfile=/etc/etcd/etcd.key \
+--etcd-cafile=/etc/etcd/ca.crt \
+--etcd-certfile=/var/lib/kubernetes/apiserver-etcd-client.crt \
+--etcd-keyfile=/var/lib/kubernetes/apiserver-etcd-client.key \
 --etcd-servers=https://127.0.0.1:2379 \
 --kubelet-client-certificate=/var/lib/kubernetes/kube-api.crt \
 --kubelet-client-key=/var/lib/kubernetes/kube-api.key \
@@ -37,8 +37,10 @@ ExecStart=/usr/local/bin/kube-apiserver \
 --event-ttl=1h \
 --service-account-key-file=/var/lib/kubernetes/service-account.crt \
 --service-account-signing-key-file=/var/lib/kubernetes/service-account.key \
---service-account-issuer=https://{{ansible_default_ipv4.address}}:6443 \
+--service-account-issuer=https://{{ip_address}}:6443 \
 --encryption-provider-config=/var/lib/kubernetes/encryption-at-rest.yaml \
+--tls-min-version VersionTLS12 \
+--tls-cipher-suites TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384 \
 --v=2
 Restart=on-failure
 RestartSec=5
