--- a/roles/etcd/templates/etcd.cnf.j2
+++ b/roles/etcd/templates/etcd.cnf.j2
@@ -7,5 +7,5 @@ basicConstraints = CA:FALSE
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
 subjectAltName = @alt_names
 [alt_names]
-IP.1 = {{ansible_default_ipv4.address}}
+IP.1 = {{ip_address}}
 IP.2 = 127.0.0.1
