--- a/roles/control-plane/templates/kube-controller-manager.service.j2
+++ b/roles/control-plane/templates/kube-controller-manager.service.j2
@@ -7,14 +7,14 @@ ExecStart=/usr/local/bin/kube-controller-manager \
 --bind-address=0.0.0.0 \
 --service-cluster-ip-range=10.96.0.0/12 \
 --cluster-cidr=10.244.0.0/16 \
---kubeconfig=/var/lib/kubernetes/kube-controller-manager.kubeconfig \
---authentication-kubeconfig=/var/lib/kubernetes/kube-controller-manager.kubeconfig \
---authorization-kubeconfig=/var/lib/kubernetes/kube-controller-manager.kubeconfig \
+--kubeconfig=/etc/kubernetes/controller-manager.conf \
+--authentication-kubeconfig=/etc/kubernetes/controller-manager.conf \
+--authorization-kubeconfig=/etc/kubernetes/controller-manager.conf \
 --leader-elect=true \
---cluster-signing-cert-file=/var/lib/kubernetes/ca.crt \
---cluster-signing-key-file=/var/lib/kubernetes/ca.key \
---root-ca-file=/var/lib/kubernetes/ca.crt \
---service-account-private-key-file=/var/lib/kubernetes/service-account.key \
+--cluster-signing-cert-file=/etc/kubernetes/pki/ca.crt \
+--cluster-signing-key-file=/etc/kubernetes/pki/ca.key \
+--root-ca-file=/etc/kubernetes/pki/ca.crt \
+--service-account-private-key-file=/etc/kubernetes/pki/sa.key \
 --controllers=*,bootstrapsigner \
 --use-service-account-credentials=true \
 --allocate-node-cidrs=true \
