--- a/roles/worker/templates/kubelet-config.yaml.j2
+++ b/roles/worker/templates/kubelet-config.yaml.j2
@@ -6,7 +6,7 @@ authentication:
   webhook:
     enabled: true
   x509:
-    clientCAFile: "/var/lib/kubernetes/ca.crt"
+    clientCAFile: "/etc/kubernetes/pki/ca.crt"
 authorization:
   mode: Webhook
 clusterDomain: "cluster.local"
