--- a/roles/control-plane/templates/kube-apiserver.service.j2
+++ b/roles/control-plane/templates/kube-apiserver.service.j2
@@ -7,27 +7,27 @@ ExecStart=/usr/local/bin/kube-apiserver \
 --advertise-address={{ip_address}} \
 --allow-privileged=true \
 --authorization-mode=Node,RBAC \
---client-ca-file=/var/lib/kubernetes/ca.crt \
+--client-ca-file=/etc/kubernetes/pki/ca.crt \
 --enable-admission-plugins=NodeRestriction,ValidatingAdmissionWebhook \
 --enable-bootstrap-token-auth=true \
---etcd-cafile=/etc/etcd/ca.crt \
---etcd-certfile=/var/lib/kubernetes/apiserver-etcd-client.crt \
---etcd-keyfile=/var/lib/kubernetes/apiserver-etcd-client.key \
+--etcd-cafile=/etc/kubernetes/pki/etcd/ca.crt \
+--etcd-certfile=/etc/kubernetes/pki/apiserver-etcd-client.crt \
+--etcd-keyfile=/etc/kubernetes/pki/apiserver-etcd-client.key \
 --etcd-servers=https://127.0.0.1:2379 \
---kubelet-client-certificate=/var/lib/kubernetes/kube-api.crt \
---kubelet-client-key=/var/lib/kubernetes/kube-api.key \
+--kubelet-client-certificate=/etc/kubernetes/pki/apiserver-kubelet-client.crt \
+--kubelet-client-key=/etc/kubernetes/pki/apiserver-kubelet-client.key \
 --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname \
---proxy-client-cert-file=/var/lib/kubernetes/front-proxy-client.crt \
---proxy-client-key-file=/var/lib/kubernetes/front-proxy-client.key \
+--proxy-client-cert-file=/etc/kubernetes/pki/front-proxy-client.crt \
+--proxy-client-key-file=/etc/kubernetes/pki/front-proxy-client.key \
 --requestheader-allowed-names=front-proxy-client \
---requestheader-client-ca-file=/var/lib/kubernetes/front-proxy-ca.crt \
+--requestheader-client-ca-file=/etc/kubernetes/pki/front-proxy-ca.crt \
 --requestheader-extra-headers-prefix=X-Remote-Extra- \
 --requestheader-group-headers=X-Remote-Group \
 --requestheader-username-headers=X-Remote-User \
---service-account-key-file=/var/lib/kubernetes/service-account.crt \
+--service-account-key-file=/etc/kubernetes/pki/sa.pub \
 --service-cluster-ip-range=10.96.0.0/12 \
---tls-cert-file=/var/lib/kubernetes/kube-api.crt \
---tls-private-key-file=/var/lib/kubernetes/kube-api.key \
+--tls-cert-file=/etc/kubernetes/pki/apiserver.crt \
+--tls-private-key-file=/etc/kubernetes/pki/apiserver.key \
 --service-node-port-range=30000-32767 \
 --audit-log-maxage=30 \
 --audit-log-maxbackup=3 \
@@ -35,10 +35,10 @@ ExecStart=/usr/local/bin/kube-apiserver \
 --audit-log-path=/var/log/kube-api-audit.log \
 --bind-address=0.0.0.0 \
 --event-ttl=1h \
---service-account-key-file=/var/lib/kubernetes/service-account.crt \
---service-account-signing-key-file=/var/lib/kubernetes/service-account.key \
+--service-account-key-file=/etc/kubernetes/pki/sa.pub \
+--service-account-signing-key-file=/etc/kubernetes/pki/sa.key \
 --service-account-issuer=https://{{ip_address}}:6443 \
---encryption-provider-config=/var/lib/kubernetes/encryption-at-rest.yaml \
+--encryption-provider-config=/etc/kubernetes/encryption-at-rest.yaml \
 --tls-min-version VersionTLS12 \
 --tls-cipher-suites TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384 \
 --v=2
