--- a/roles/control-plane/templates/kube-scheduler.service.j2
+++ b/roles/control-plane/templates/kube-scheduler.service.j2
@@ -4,9 +4,9 @@ Documentation=https://github.com/kubernetes/kubernetes
 
 [Service]
 ExecStart=/usr/local/bin/kube-scheduler \
-  --kubeconfig=/var/lib/kubernetes/kube-scheduler.kubeconfig \
-  --authentication-kubeconfig=/var/lib/kubernetes/kube-scheduler.kubeconfig \
-  --authorization-kubeconfig=/var/lib/kubernetes/kube-scheduler.kubeconfig \
+  --kubeconfig=/etc/kubernetes/scheduler.conf \
+  --authentication-kubeconfig=/etc/kubernetes/scheduler.conf \
+  --authorization-kubeconfig=/etc/kubernetes/scheduler.conf \
   --bind-address=0.0.0.0 \
   --tls-min-version VersionTLS12 \
   --leader-elect=true
