--- a/roles/worker/templates/kubelet.service.j2
+++ b/roles/worker/templates/kubelet.service.j2
@@ -6,8 +6,8 @@ Requires=containerd.service
 
 [Service]
 ExecStart=/usr/local/bin/kubelet \
-  --config=/var/lib/kubelet/kubelet-config.yaml \
-  --kubeconfig=/var/lib/kubelet/{{ansible_hostname}}.kubeconfig \
+  --config=/etc/kubernetes/kubelet-config.yaml \
+  --kubeconfig=/etc/kubernetes/kubelet.conf \
   --v=2
 Restart=on-failure
 RestartSec=5
