--- a/roles/worker/templates/kubelet.service.j2
+++ b/roles/worker/templates/kubelet.service.j2
@@ -5,6 +5,7 @@ After=containerd.service
 Requires=containerd.service
 
 [Service]
+EnvironmentFile=/etc/environment
 ExecStart=/usr/local/bin/kubelet \
   --config=/etc/kubernetes/kubelet-config.yaml \
   --kubeconfig=/etc/kubernetes/kubelet.conf \
