--- a/roles/worker/templates/kube-proxy-config.yaml.j2
+++ b/roles/worker/templates/kube-proxy-config.yaml.j2
@@ -1,6 +1,6 @@
 kind: KubeProxyConfiguration
 apiVersion: kubeproxy.config.k8s.io/v1alpha1
 clientConnection:
-  kubeconfig: "/etc/kubernetes/kube-proxy.conf"
+  kubeconfig: "/etc/kubernetes/proxy.conf"
 mode: "iptables"
 clusterCIDR: "10.244.0.0/16"
