--- a/roles/worker/templates/kubelet-config.yaml.j2
+++ b/roles/worker/templates/kubelet-config.yaml.j2
@@ -13,6 +13,18 @@ clusterDomain: "cluster.local"
 clusterDNS:
   - "10.96.0.10"
 runtimeRequestTimeout: "15m"
+tlsPrivateKeyFile: "/etc/kubernetes/pki/{{ansible_hostname}}.key"
+tlsCertFile: "/etc/kubernetes/pki/{{ansible_hostname}}.crt"
+tlsCipherSuites:
+  - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
+  - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
+  - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
+  - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+  - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305
+  - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
+  - TLS_RSA_WITH_AES_256_GCM_SHA384
+  - TLS_RSA_WITH_AES_128_GCM_SHA256
+PodPidsLimit: 4096
 readOnlyPort: 0
 protectKernelDefaults: true
 cgroupDriver: systemd
