include /usr/local/bin in path

--- a/roles/worker/templates/kubelet.service.j2
+++ b/roles/worker/templates/kubelet.service.j2
@@ -8,6 +8,7 @@ Requires=containerd.service
 EnvironmentFile=/etc/environment
 ExecStart=/usr/local/bin/kubelet \
   --config=/etc/kubernetes/kubelet-config.yaml \
+  --hostname-override={{ansible_hostname}} \
   --kubeconfig=/etc/kubernetes/kubelet.conf \
   --v=2
 Restart=on-failure
