conditionals for helm charts

--- a/roles/charts/templates/helmfile-2.yaml.j2
+++ b/roles/charts/templates/helmfile-2.yaml.j2
@@ -10,6 +10,6 @@ releases:
   - name: bootstrapPassword
     value: admin
   - name: hostname
-    value: "rancher.{{loadbal_ip}}.nip.io"
+    value: "rancher.{{loadbal_ip|default(ip_address)}}.nip.io"
   - name: replicas
     value: 1
