--- a/roles/control-plane/templates/kube-scheduler.service.j2
+++ b/roles/control-plane/templates/kube-scheduler.service.j2
@@ -3,7 +3,7 @@ Description=Kubernetes Scheduler
 Documentation=https://github.com/kubernetes/kubernetes
 
 [Service]
-EnvironmentFile=/etc/environment
+EnvironmentFile=/etc/k8s.env
 ExecStart=/usr/local/bin/kube-scheduler \
   --kubeconfig=/etc/kubernetes/scheduler.conf \
   --authentication-kubeconfig=/etc/kubernetes/scheduler.conf \
