--- a/roles/control-plane/templates/control-plane.conf.j2
+++ b/roles/control-plane/templates/control-plane.conf.j2
@@ -84,15 +84,12 @@ DNS.1 = kubernetes
 DNS.2 = kubernetes.default
 DNS.3 = kubernetes.default.svc
 DNS.4 = kubernetes.default.svc.cluster.local
+DNS.5 = localhost
 IP.1 = 127.0.0.1
 IP.2 = {{ip_address}}
 IP.3 = {{ansible_default_ipv4.address}}
 IP.4 = {{ansible_host}}
 IP.5 = 10.96.0.1
-{% if loadbalancer_ext_ip is defined %}
-IP.6 = {{loadbalancer_ext_ip}}
-IP.7 = {{loadbalancer_int_ip}}
-{% endif %}
 
 [kube-api-server_distinguished_name]
 CN = kube-apiserver
