--- a/roles/charts/templates/helmfile-1.yaml.j2
+++ b/roles/charts/templates/helmfile-1.yaml.j2
@@ -69,7 +69,7 @@ releases:
   - name: snapshotterReplicaCount
     value: 1
   - name: defaultSettings.defaultReplicaCount
-    value: 1
+    value: '{"v1":"1","v2":"1"}'
   - name: persistence.defaultClassReplicaCount
     value: 1
   condition: longhorn.enabled
