--- a/roles/cilium/templates/cilium-values.yaml.j2
+++ b/roles/cilium/templates/cilium-values.yaml.j2
@@ -1,6 +1,8 @@
-kubeProxyReplacement: false
+kubeProxyReplacement: true
 k8sServiceHost: {{cp_endpoint}}
 k8sServicePort: 6443
+cni:
+  exclusive: false
 ipam:
   operator:
     clusterPoolIPv4PodCIDRList:
