fix deprecated ansible facts syntax

--- a/roles/worker/templates/Caddyfile.j2
+++ b/roles/worker/templates/Caddyfile.j2
@@ -9,7 +9,7 @@
                     health_port 6443
                     {%- for server in groups['control_plane'] %}
 
-                    upstream {% if hostvars[server]['internal_ip'] is defined and hostvars[server]['internal_ip'] != '' %}{{hostvars[server]['internal_ip']}}{% else %}{{hostvars[server].ansible_default_ipv4.address}}{% endif %}:6443
+                    upstream {% if hostvars[server]['internal_ip'] is defined and hostvars[server]['internal_ip'] != '' %}{{hostvars[server]['internal_ip']}}{% else %}{{hostvars[server].ansible_facts.default_ipv4.address}}{% endif %}:6443
                     {%- endfor %} 
                 }
             }
