--- a/roles/worker/templates/kubelet.service.j2
+++ b/roles/worker/templates/kubelet.service.j2
@@ -8,7 +8,7 @@ Requires=containerd.service
 EnvironmentFile=/etc/k8s.env
 ExecStart=/usr/local/bin/kubelet \
   --config=/etc/kubernetes/kubelet-config.yaml \
-  --hostname-override={{ansible_hostname}} \
+  --hostname-override={{ansible_facts.hostname}} \
   --kubeconfig=/etc/kubernetes/kubelet.conf \
   --v=2
 Restart=always
