--- a/roles/control-plane/templates/control-plane.conf.j2
+++ b/roles/control-plane/templates/control-plane.conf.j2
@@ -87,8 +87,8 @@ DNS.4 = kubernetes.default.svc.cluster.local
 DNS.5 = localhost
 IP.1 = 127.0.0.1
 IP.2 = {{ip_address}}
-IP.3 = {{ansible_default_ipv4.address}}
-IP.4 = {{ansible_host}}
+IP.3 = {{ansible_facts.default_ipv4.address}}
+IP.4 = {{ansible_facts.host}}
 IP.5 = 10.96.0.1
 
 [kube-api-server_distinguished_name]
